--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -5,10 +5,10 @@ WORKDIR /code
 RUN apt-get update \
     && apt-get -y install libpq-dev gcc
 
-COPY ./requirements.txt /code/requirements.txt
+COPY requirements.txt /code/requirements.txt
 
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
-COPY ./app /code/app
+COPY . /code/app
 
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
